# simpleworld

./: .gitignore  CMakeLists.txt  ChangeLog  Changelog  Doxyfile  Doxyfile.cmake  INSTALL  NEWS  README
admin/: autogen.sh  compile.sh  rm_tmpfiles.sh  svn_branch.sh  svn_commit.sh  svn_props.sh
cmake/: FindBoost.cmake  FindSQLite3.cmake  FindSQLite3x.cmake  FindXySSL.cmake
cpu/: CMakeLists.txt  cpu.cpp  cpu.h  cpu.hpp  cpu_file.cpp  cpu_file.h  cpu_file.hpp  exception.h  exception.hpp  file.cpp  file.h  file.hpp  instruction.cpp  instruction.h  instruction.hpp  interrupt.hpp  memory.cpp  memory.h  memory.hpp  memory_file.cpp  memory_file.hpp  object.cpp  object.h  object.hpp  operation.cpp  operations.h  operations.hpp  operations_arithmetic.cpp  operations_branch.cpp  operations_function.cpp  operations_logic.cpp  operations_management.cpp  operations_move.cpp  operations_shift.cpp  source.cpp  source.h  source.hpp  types.h  types.hpp  word.cpp  (+2 more)
data/: swl.xml
db/: CMakeLists.txt  alivebug.cpp  alivebug.hpp  bug.cpp  bug.h  bug.hpp  bugelement.cpp  bugelement.hpp  code.cpp  code.h  code.hpp  common.cpp  common.hpp  cpu.cpp  cpu.h  cpu.hpp  data.txt  db.cpp  db.h  db.hpp  deadbug.cpp  deadbug.hpp  egg.cpp  egg.hpp  environment.cpp  environment.h  environment.hpp  exception.h  exception.hpp  food.cpp  food.hpp  hierarchy.cpp  hierarchy.h  hierarchy.hpp  memory.cpp  memory.hpp  mutation.cpp  mutation.hpp  mutations.cpp  mutations.h  (+6 more)
doc/: .gitignore  cpu.txt  database-1.0.odt  database-1.0.sql  database_er.dia  database_tables.sql  database_tables.txt  simple.txt  simpleworld-1.0.odt
getopt/: CMakeLists.txt
scripts/: README  age.py  alive_bugs.py  energy.py  food.py  hierarchy.py  hierarchy.sh  info.sh  mutations.py  mutations.sh  run.sh  show_info.sh  sons.py  species.sh  stats.sh  stats2ods.py
simple/: CMakeLists.txt  config.h.cmake  config.hpp.cmake  exception.h  exception.hpp  types.h  types.hpp
simpleworld/: CMakeLists.txt  actionblocked.hpp  actionerror.hpp  bug.cpp  bug.hpp  bugdeath.hpp  config.hpp.cmake  cpu.cpp  cpu.hpp  dbmemory.cpp  dbmemory.hpp  egg.cpp  egg.hpp  element.cpp  element.hpp  exception.hpp  food.cpp  food.hpp  ints.hpp  ioerror.hpp  isa.cpp  isa.hpp  movement.cpp  movement.hpp  mutation.cpp  mutation.hpp  operations.hpp  operations_world.cpp  reproduction.cpp  reproduction.hpp  simpleworld.cpp  simpleworld.hpp  types.hpp  world.cpp  world.hpp  worlderror.hpp
simpleworld/cpu/: CMakeLists.txt  codeerror.hpp  cpu.cpp  cpu.hpp  cs.cpp  cs.hpp  errordirective.hpp  exception.hpp  file.cpp  file.hpp  instruction.cpp  instruction.hpp  interrupt.hpp  isa.cpp  isa.hpp  memory.cpp  memory.hpp  memory_file.cpp  memory_file.hpp  memoryerror.hpp  object.cpp  object.hpp  operations.hpp  operations_arithmetic.cpp  operations_branch.cpp  operations_function.cpp  operations_logic.cpp  operations_management.cpp  operations_move.cpp  operations_shift.cpp  operations_sign.cpp  parsererror.hpp  source.cpp  source.hpp  types.hpp  word.cpp  word.hpp
simpleworld/db/: CMakeLists.txt  alivebug.cpp  alivebug.hpp  blob.cpp  blob.hpp  bug.cpp  bug.hpp  bugelement.cpp  bugelement.hpp  code.cpp  code.hpp  common.cpp  common.hpp  cpu.cpp  cpu.hpp  db.cpp  db.hpp  deadbug.cpp  deadbug.hpp  default.cpp  default.hpp  egg.cpp  egg.hpp  environment.cpp  environment.hpp  exception.hpp  food.cpp  food.hpp  memory.cpp  memory.hpp  mutation.cpp  mutation.hpp  registers.cpp  registers.hpp  resource.cpp  resource.hpp  spawn.cpp  spawn.hpp  stats.cpp  stats.hpp  (+8 more)
sqlite3/: CMakeLists.txt  alter.c  analyze.c  btmutex.c  btree.c  btreeInt.h  build.c  delete.c  expr.c  func.c  icu.c  insert.c  main.c  mem2.c  mem3.c  mem4.c  mutex_os2.c  pager.c  pager.h  pragma.c  prepare.c  select.c  sqlite3.c  sqliteInt.h  sqliteLimit.h  update.c  util.c  vacuum.c  vdbe.c  vdbe.h  where.c
sqlite3x/: CMakeLists.txt  COPYING  ChangeLog  README  sqlite3x.hpp  sqlite3x_command.cpp  sqlite3x_connection.cpp  sqlite3x_cursor.cpp  sqlite3x_exception.cpp  (+1 more)
src/: CMakeLists.txt  create.cpp  egg.cpp  env.cpp  fakecpu.cpp  fakecpu.hpp  food.cpp  info.cpp  main.cpp  printexc.cpp  printexc.hpp  random.cpp  random.hpp  resource.cpp  run.cpp  simpleworld.cpp  simpleworld.hpp  spawn.cpp  swcpu.cpp  swlc.cpp  swld.cpp  swupdate.cpp  table.cpp  table.hpp  vacuum.cpp
src/common/: CMakeLists.txt  fakecpu.cpp  fakecpu.hpp  fakeisa.cpp  fakeisa.hpp  info.hpp  info.hpp.cmake  printexc.cpp  printexc.hpp
src/simpleworld/: CMakeLists.txt  create.cpp  egg.cpp  env.cpp  food.cpp  info.cpp  random.cpp  random.hpp  run.cpp  simpleworld.cpp  simpleworld.hpp  table.cpp  table.hpp  vacuum.cpp
src/swcpu/: CMakeLists.txt  cpu.cpp  cpu.hpp  memoryfile.cpp  memoryfile.hpp  swcpu.cpp
src/swlc/: CMakeLists.txt  swlc.cpp
src/swld/: CMakeLists.txt  swld.cpp
swl/: action.swl  (+3 more)
tests/: CMakeLists.txt  instruction_test.cpp  memory_test.cpp  word_test.cpp
tests/cpu/: CMakeLists.txt  cpu_test.cpp  cs_test.cpp  file_test.cpp  instruction_test.cpp  isa_test.cpp  memory_test.cpp  object.swl  object.swo  object_test.cpp  source.swl  source.swo  source_blocks.swl  source_constants.swl  source_includes.swl  source_preprocess.swl  source_test.cpp  word_test.cpp
tests/cpu/include/: defines.swl  macros.swl
tests/db/: CMakeLists.txt  alivebug_test.cpp  blob_test.cpp  bug_test.cpp  code_test.cpp  db.sw  db.sw.sql  db_test.cpp  deadbug_test.cpp  egg_test.cpp  environment_test.cpp  food_test.cpp  mutation_test.cpp  opendb.cpp  opendb.hpp  registers_test.cpp  resource_test.cpp  spawn_test.cpp  stats_test.cpp  transaction_test.cpp  world_test.cpp
tests/simpleworld/: CMakeLists.txt  ints_test.cpp  movement_test.cpp  world_test.cpp
tests/stdlib/: CMakeLists.txt  address_test.cpp  alloc_test.cpp  array_test.cpp  bits_test.cpp  cs_test.cpp  def_test.cpp  error_test.cpp  init_test.cpp  int_test.cpp  jmp_test.cpp  list_test.cpp  map_test.cpp  math_test.cpp  mem_test.cpp  multimap_test.cpp  node_test.cpp  queue_test.cpp  random_test.cpp  set_test.cpp  stack_test.cpp  time_test.cpp  world_test.cpp
tests/worldlib/: CMakeLists.txt  events_test.cpp
(+255 files in other folders)
